Fixed padding and alignment in mobile view

--- a/less/index.less
+++ b/less/index.less
@@ -171,15 +171,16 @@ p {
 	header {
 		@media(max-width: 500px) {
 			width: 100%;
-			.centered() {
-				align-items: flex-end;
-			};
 		}
 		nav {
 			.flex-mixin(row, flex-end);
 			padding: @padding-top-bottom;
 			@media (max-width: 500px) {
-				.centered();	
+				padding-top: 0;
+				padding-bottom: 0;
+				display: flex;
+				flex-direction: column;
+				align-content: stretch;
 			}
 			a {
 				font-size: 1.6rem;
@@ -187,12 +188,16 @@ p {
 				font-family: @font-stack-cabin;
 				.navigation-mixin();
 				@media(max-width: 500px) {
-					padding: 20px 100px;
+					align-self: center;
+					width: 100%;
+					text-align: center;
+					padding: 20px 0;
 					border: 1px solid @dirtygrey;
 				}
 			}	
 		}
 	}
+
 	section {
 		.flex-column-center() {
 			justify-content:flex-start;
@@ -212,22 +217,28 @@ p {
 	margin: 20px 0;
 	.bordered();
 	.flex-mixin(column, flex-start);
+	@media(max-width: 500px) {
+		padding-top: 0;
+		margin-top: 0;
+		align-items: center;
+	}
 	.profile {
+		margin-top: 10px;
 		width: 200px;
 		height: auto;
-		// @media(max-width: 500px) {
-		// 	width: 50%;
-		// }
 	}
-	// @media(max-width: 500px) {
-	// 	margin: 0;
-	// 	padding: 20px 0;
-	// 	align-items: center;
-	// }
+	h1 {
+		@media(max-width: 420px) {
+			font-size: 2.9rem;
+		}
+	}
 	button {
 		.button-mixin();
 		padding: 15px 0px;
 		width: 27%;
+		@media(max-width: 500px) {
+			width: 50%;
+		}
 	}
 }
 
